Fix items alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,6 @@ body {
     padding: var(--card-padding, 40px);
     row-gap: var(--card-row-gap, 32px);
     flex-direction: column;
-    align-items: stretch;
 }
 
 /* UTILITIES */
@@ -112,6 +111,7 @@ body {
 
 /* BLOCK */
 .card-header {
+    align-self: flex-start;
     gap: 24px;
 }
 
